# buildmap-prototype

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  analyze_parameter_issue.py  automated-test-report-updated.md  automated-test-report.md  buildmap.py  comprehensive-test-plan.md  debug_workflow_properties.py  next-phase.md  phase2_corrected_workflow.json  phase2_fixed_workflow.json  phase2_minimal_workflow.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_cicd_setup.py  test_minimal_workflow.py  test_parameter_merging.py  test_phase_guide.py  test_phase_management.py  test_step_update.py  test_workflow_update.py  upload_phase2.py
.github/: SECRETS.md
.github/workflows/: ci-cd-pipeline.yml  manual-deploy.yml  test-workflow.yml
n8n_integration/: API_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  N8N_API_REFERENCE.md  README.md  __init__.py  n8n_client.py  test_api_endpoints.py  test_error_handling.py  test_n8n_connection_detailed.py  test_n8n_integration.py  test_simple.py  test_tags_removal.py  test_validation_simple.py  test_workflow_validation.py  workflow_manager.py
prompts/: system_prompt.txt
