[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buildmap-prototype"
version = "0.1.0"
description = "A conversational AI assistant for building n8n workflows"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "BuildMap Team", email = "info@buildmap.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit>=1.31.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/vlakmaker/buildmap-prototype"

[tool.setuptools]
py-modules = ["buildmap"]

[tool.setuptools.packages.find]
where = ["."]
include = ["n8n_integration"]
exclude = ["prompts*", "exports*", "*.tests", "*.tests.*", "tests.*", "tests"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
# Exclude integration test scripts from test discovery
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude n8n_integration test scripts (they're integration scripts, not unit tests)
norecursedirs = ["n8n_integration", ".git", ".github", "dist", "build", "exports", "prompts"]
addopts = "-v --tb=short"
